Traduzindo login para português

--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -14,7 +14,7 @@
             </div>
             {%endfor%}
             {{wtf.quick_form(login_form)}}
-            <p>Don't have an account? <a href="{{url_for('register')}}">Sign up here</a></p>
+            <p>Não tem conta? <a href="{{url_for('register')}}">Registre-se aqui</a></p>
         </div>
         <div class="col-md-2"></div>
     </div>
