--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -14,7 +14,7 @@
                 <li><a href="{{ url_for('home') }}">Home</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="{{url_for('login')}}" style="color: #fff;">Sign In</a></li>
+                <li><a href="{{url_for('login')}}" style="color: #fff;">Login</a></li>
             </ul>
         </div>
     </div>
