--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -14,7 +14,14 @@
                 <li><a href="{{ url_for('home') }}">Home</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="{{url_for('login')}}" style="color: #fff;">Login</a></li>
+                {%if current_user.is_authenticated%}
+                    <li>
+                        <a href="{{url_for('profile', uname = current_user.username)}}">{{current_user.username}}</a>
+                    </li>
+                    <li><a href="{{url_for('logout')}}">Logout</a></li>
+                {%else%}
+                    <li><a href="{{url_for('login')}}" style="color: #fff;">Login</a></li>
+                {%endif%}
             </ul>
         </div>
     </div>
