--- a/src/templates/macros.html
+++ b/src/templates/macros.html
@@ -5,6 +5,10 @@
         <div class="text-center">
             <a href="/movie/{{movie.id}}">
                 <h4>{{ movie.title|truncate(10)}}</h4></a>
+            <a href="/watched/{{movie.id}}">
+                <button>Adicionar à lista de "assistidos"</button></a>
+            <a href="/towatch/{{movie.id}}">
+                <button>Adicionar à lista de "para assistir"</button></a>
         </div>
     </div>
     {% endfor %}
