--- a/src/templates/macros.html
+++ b/src/templates/macros.html
@@ -13,3 +13,20 @@
     </div>
     {% endfor %}
 {% endmacro %}
+
+
+{% macro displayReviews(review_list) %}
+    {% for review in review_list %}
+    <div class="row">
+        <div class="col-xs-2 col-sm-2 col-md-4 col-lg-4">
+            <h4>Author</h4>
+            <p>{{review.user_id.username}}</p>
+        </div>
+        <div class="col-xs-10 col-sm-10 col-md-8 col-lg-8">
+            <h2><a href="{{url_for('open_review')}}">
+                {{review.review_title}}
+            </a></h2>
+        </div>
+    </div>
+    {% endfor %}
+{% endmacro %}
